--- a/index.html
+++ b/index.html
@@ -11,19 +11,44 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="./css/all.min.css">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-
     <title>BAKERY</title>
   </head>
   <body>
+    <header id="home">
+      <div class="container">
+        <div class="hamburger-menu">
+          <i class="fas fa-bars"></i>
+          <i class="fas fa-times"></i>
+        </div>
+        <nav>
+          <a href="index.html" class="nav-brand"><img src="./img/logo.png" alt=""></a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#home" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#menu" class="nav-link">Menu</a>
+            </li>
+            <li class="nav-item">
+              <a href="#chef" class="nav-link">Our Team</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="hero-text">
+          <h1>Welcome</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+          <a href="#" class="btn">Explore</a>
+          <a href="#" class="btn">Find a store</a>
+        </div>
+      </div> <!-- End Container -->
+    </header>
 
    
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="./js/jquery-3.4.1.min.js"></script>
-    <script src="./js/popper.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
