--- a/index.html
+++ b/index.html
@@ -46,6 +46,48 @@
       </div> <!-- End Container -->
     </header>
 
+    <main>
+      <section class="about">
+        <div class="container">
+          <div class="left">
+            <div class="section-heading">
+              <h4>Discover</h4>
+              <h1>Our Story</h1>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolore laboriosam rerum iusto excepturi sit porro qui obcaecati at mollitia voluptas id harum laborum, animi autem eligendi. Vero, dignissimos qui.</p>
+            <a href="#" class="btn">Find out more</a>
+          </div>
+          <div class="right">
+            <img src="./img/about-img.jpg" alt="" class="img-fluid">
+          </div>
+        </div>
+      </section>
+
+      <section class="menu">
+        <div class="container">
+          <div class="shop-info">
+            <i class="fas fa-clock"></i>
+            <h1>Hours of operation</h1>
+            <p>Mon to Fri 8:00am - 6:00pm</p>
+            <p>Sat to Sun 8:00am - 1:00pm</p>
+          </div>
+          <div class="shop-info">
+            <i class="fas fa-map-marked"></i>
+            <h1>Our Location</h1>
+            <p>Mon to Fri 8:00am - 6:00pm</p>
+            <p>Sat to Sun 8:00am - 1:00pm</p>
+          </div>
+          <div class="shop-info">
+            <i class="fas fa-mobile-alt"></i>
+            <h1>Get in touch</h1>
+            <p>Mon to Fri 8:00am - 6:00pm</p>
+            <p>Sat to Sun 8:00am - 1:00pm</p>
+          </div>
+        </div>
+        <hr style="margin-top: 3rem; border: 1px solid rgba(255, 255, 255, 0.05);"/>
+      </section>
+    </main>
+
    
     <!-- Optional JavaScript -->
     <script src="./js/jquery-3.4.1.min.js"></script>
