--- a/index.html
+++ b/index.html
@@ -85,6 +85,76 @@
           </div>
         </div>
         <hr style="margin-top: 3rem; border: 1px solid rgba(255, 255, 255, 0.05);"/>
+        <div class="container-fluid">
+          <div class="section-heading">
+            <h4>our tasty food</h4>
+            <h1>The Menu</h1>
+          </div>
+          <!-- Row 1 -->
+          <div class="row">
+            <div class="img">
+              <img src="./img/menu-item-1.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="menu-item">
+              <h6>$10</h6>
+              <h1>The Cake</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <div class="img">
+              <img src="./img/menu-item-2.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="menu-item">
+              <h6>$10</h6>
+              <h1>The Cake</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+
+            <div class="img">
+              <img src="./img/menu-item-3.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="menu-item">
+              <h6>$10</h6>
+              <h1>The Cake</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+          </div>
+          <!-- Row 2 -->
+          <div class="row">
+            <div class="menu-item">
+              <h6>$10</h6>
+              <h1>The Cake</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="img">
+              <img src="./img/menu-item-4.jpg" class="img-fluid" alt="">
+            </div>
+
+            <div class="menu-item">
+              <h6>$10</h6>
+              <h1>The Cake</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="img">
+              <img src="./img/menu-item-5.jpg" class="img-fluid" alt="">
+            </div>
+
+            <div class="menu-item">
+              <h6>$10</h6>
+              <h1>The Cake</h1>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+              <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="img">
+              <img src="./img/menu-item-6.jpg" class="img-fluid" alt="">
+            </div>
+          </div>
+        </div> 
       </section>
     </main>
 
