--- a/index.html
+++ b/index.html
@@ -156,6 +156,43 @@
           </div>
         </div> 
       </section>
+
+      <section class="chef">
+        <div class="container">
+          <div class="section-heading">
+            <h4>Meet</h4>
+            <h1>Our Chef</h1>
+          </div>
+          <div class="row">
+            <div class="chefOne">
+              <img src="./img/chef-1.png" alt="" class="img-fluid">
+              <div class="card-body">
+                <h1>Olivia Logan</h1>
+                <h6>Cupcake Specialist</h6>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quia?</p>
+              </div>
+            </div>
+
+            <div class="chefTwo">
+              <img src="./img/chef-2.png" alt="" class="img-fluid">
+              <div class="card-body">
+                <h1>Jessica Lewis</h1>
+                <h6>Master Baker</h6>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quia?</p>
+              </div>
+            </div>
+
+            <div class="chefThree">
+              <img src="./img/chef-3.png" alt="" class="img-fluid">
+              <div class="card-body">
+                <h1>Jame Holt</h1>
+                <h6>Cake Specialist</h6>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quia?</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
    
